Public beta release - 5.0.3-beta

--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,30 @@
 {
     "name": "simplicateca/selectplus",
-    "description": "SelectPlus is a dropdown-like custom field plugin for Craft CMS 4+",
+    "description": "SelectPlus is a dropdown-like custom field plugin for Craft CMS 5+",
     "type": "craft-plugin",
-    "keywords": ["craft-cms", "custom-field", "select", "select-field", "dropdown" ],
+    "keywords": ["craft-cms", "custom-field", "select", "select-field", "dropdown"],
     "license": "MIT",
-    "authors": [
-      {
+    "authors": [{
         "name": "Simplicate",
         "homepage": "https://simplicate.ca"
-      }
-    ],
+    }],
     "support": {
-      "email" : "plugins@simplicate.ca",
-      "issues": "https://github.com/simplicateca/craft-selectplus-field/issues?state=open",
-      "source": "https://github.com/simplicateca/craft-selectplus-field",
-      "docs"  : "https://github.com/simplicateca/craft-selectplus-field/blob/main/README.md"
+        "email" : "info@simplicate.ca",
+        "issues": "https://github.com/simplicateca/craft-selectplus-field/issues?state=open",
+        "source": "https://github.com/simplicateca/craft-selectplus-field",
+        "docs"  : "https://github.com/simplicateca/craft-selectplus-field/blob/main/README.md"
     },
     "require": {
-      "craftcms/cms": "^5.0.0",
-      "nystudio107/craft-emptycoalesce": "^5.0.0"
+        "craftcms/cms": "^5.0.0"
     },
     "autoload": {
-      "psr-4": {
-        "simplicateca\\selectplus\\": "src/"
-      }
+        "psr-4": {
+            "simplicateca\\selectplus\\": "src/"
+        }
     },
     "extra": {
-      "name": "SelectPlus",
-      "handle": "selectplus",
-      "class": "simplicateca\\selectplus\\SelectPlus"
+        "name": "SelectPlus",
+        "handle": "selectplus",
+        "class": "simplicateca\\selectplus\\SelectPlus"
     }
-  }
+}
